--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mux/mux-player-react": "^3.1.0",
     "@portabletext/react": "^3.1.0",
     "@sanity/image-url": "^1.0.2",
     "framer-motion": "^11.3.21",
